--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <title>Yıldızlar Bungalov</title>
 
   <link rel="stylesheet" href="styles.css">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-  >
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
-<!-- LOADING SCREEN -->
+
+<!-- LOADER -->
 <div id="loader">
   <div class="loader-content">
-    <img src="images/logo.png" alt="Yıldızlar Bungalov Logo">
+    <img src="images/logo.png" alt="Yıldızlar Bungalov">
+    <span>YÜKLENİYOR</span>
   </div>
 </div>
 
@@ -33,9 +33,9 @@
   </nav>
 </header>
 
-<!-- HERO / ANA SAYFA -->
+<!-- HERO -->
 <section class="main-content" id="index">
-  <div class="baslık">
+  <div class="baslik">
     <h1>YILDIZLAR</h1>
     <p>“Yaşam Burada Başlıyor”</p>
   </div>
@@ -43,17 +43,24 @@
 
 <!-- HAKKIMIZDA -->
 <section class="about" id="about">
+
   <div class="container">
     <h1>Hakkımızda</h1>
 
-   <p> <strong>Yıldızlar İnşaat</strong>, yaşam alanlarını yalnızca inşa etmekle kalmayıp, onlara <strong>değer, güven ve sürdürülebilirlik</strong> kazandırma vizyonuyla faaliyet göstermektedir. Kurulduğumuz günden bu yana, kaliteyi temel alan anlayışımız ve müşteri odaklı yaklaşımımızla emlak ve inşaat sektöründe kalıcı projelere imza atıyoruz. </p> <p> Her projede; <strong>sağlam yapı, estetik tasarım ve doğru lokasyon</strong> ilkelerini merkeze alıyor, modern mimariyi fonksiyonel yaşam alanlarıyla buluşturuyoruz. Konut projelerinden ticari yapılara kadar uzanan geniş portföyümüzle, hem bugünün ihtiyaçlarına hem de yarının beklentilerine cevap veren çözümler sunuyoruz. </p> <p> Alanında deneyimli kadromuz, şeffaf çalışma prensibimiz ve güçlü teknik altyapımız sayesinde; yatırımcılarımıza güvenilir, kullanıcılarımıza ise huzurlu yaşam alanları sunmayı hedefliyoruz. Bizim için her proje, sadece bir yapı değil; içinde hayatların şekillendiği uzun vadeli bir değerdir. </p> <p> <strong>Yıldızlar İnşaat</strong> olarak, bulunduğumuz her bölgede kalıcı izler bırakmayı, kalite standartlarını sürekli yükseltmeyi ve müşterilerimizin hayallerini gerçeğe dönüştürmeyi sürdürüyoruz. </p>
+    <p><strong>Yıldızlar İnşaat</strong>, yaşam alanlarını yalnızca inşa etmekle kalmayıp,
+    onlara <strong>değer, güven ve sürdürülebilirlik</strong> kazandırma vizyonuyla
+    faaliyet göstermektedir.</p>
 
-    <p class="slogan">
-      <em>Yaşam burada başlıyor.</em>
-    </p>
+    <p>Her projede; <strong>sağlam yapı, estetik tasarım ve doğru lokasyon</strong>
+    ilkelerini merkeze alıyoruz.</p>
+
+    <p>Alanında deneyimli kadromuz ve şeffaf çalışma anlayışımızla
+    güvenilir projeler üretmeyi hedefliyoruz.</p>
+
+    <p class="slogan"><em>Yaşam burada başlıyor.</em></p>
   </div>
 
-  <div class="resim-hakkımızda">
+  <div class="resim-hakkimizda">
     <img src="images/hakkımızda.jpg" alt="Hakkımızda">
   </div>
 
@@ -76,6 +83,7 @@
       <p>Konut</p>
     </div>
   </div>
+
 </section>
 
 <!-- GÖRSELLER -->
@@ -83,30 +91,21 @@
   <div class="gorseller-wrapper">
 
     <article class="gorsel-card">
-      <img src="images/bungalov1.jpg" alt="Dış Görünüş">
+      <img src="images/bungalov1.jpg">
       <h3>Dış Görünüş</h3>
-      <p>
-        Doğayla uyumlu mimarisi ve ahşap dokusuyla
-        huzur veren bir dış tasarım sunar.
-      </p>
+      <p>Doğayla uyumlu mimari tasarım.</p>
     </article>
 
     <article class="gorsel-card">
-      <img src="images/bungalovici.jpg" alt="İç Mekan">
+      <img src="images/bungalovici.jpg">
       <h3>İç Mekan</h3>
-      <p>
-        Sade, ferah ve konforlu iç mekan tasarımıyla
-        ev sıcaklığında bir deneyim sağlar.
-      </p>
+      <p>Ferah ve konforlu yaşam alanı.</p>
     </article>
 
     <article class="gorsel-card">
-      <img src="images/dinlenmealanı.jpg" alt="Dinlenme Alanı">
+      <img src="images/dinlenmealanı.jpg">
       <h3>Dinlenme Alanı</h3>
-      <p>
-        Doğanın sesleri eşliğinde dinlenebileceğiniz,
-        sakin ve özel bir alan sunar.
-      </p>
+      <p>Huzurlu ve sakin ortam.</p>
     </article>
 
   </div>
@@ -114,86 +113,71 @@
 
 <!-- İLETİŞİM -->
 <section class="contact" id="iletisim">
+
   <div class="contact-wrapper">
 
-    <!-- SOL -->
     <div class="contact-logo">
-      <img src="images/logo.png" alt="Yıldızlar Bungalov">
+      <img src="images/logo.png">
       <p>Doğayla iç içe huzurlu bir yaşam</p>
     </div>
 
-    <!-- ORTA -->
     <div class="contact-info">
       <h3>İletişim</h3>
-
       <p><i class="fa-solid fa-phone"></i> +90 5XX XXX XX XX</p>
       <p><i class="fa-solid fa-envelope"></i> yildizlarinsaat@gmail.com</p>
       <p><i class="fa-solid fa-location-dot"></i> Sapanca / Sakarya</p>
     </div>
 
-    <!-- SAĞ -->
     <div class="contact-map">
       <iframe
-  src="https://www.google.com/maps?q=40.69922123377462,30.257227718897557&z=15&output=embed"
-  width="100%"
-  height="300"
-  style="border:0;"
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade">
-</iframe>
-
+        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1798.5887273543756!2d30.257227718897557!3d40.69922123377462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1str!2str!4v1770077653364!5m2!1str!2str"
+        loading="lazy">
+      </iframe>
     </div>
 
   </div>
 
   <div class="footer-bottom">
-    © 2026 Yıldızlar İnşaat. Tüm hakları saklıdır.
+    © 2026 Yıldızlar Bungalov. Tüm hakları saklıdır.
   </div>
+
 </section>
 
-<!-- COUNTER SCRIPT -->
-<script>
+<script src="script.js">
   window.addEventListener("load", () => {
   const loader = document.getElementById("loader");
   loader.style.opacity = "0";
-  loader.style.transition = "opacity 0.6s ease";
-
-  setTimeout(() => {
-    loader.style.display = "none";
-  }, 600);
+  setTimeout(() => loader.style.display = "none", 600);
 });
+
 const counters = document.querySelectorAll('.counter');
 let started = false;
 
-const startCounters = () => {
-  if (started) return;
-  counters.forEach(counter => {
-    const target = +counter.dataset.target;
-    let current = 0;
-    const increment = target / 120;
-
-    const update = () => {
-      current += increment;
-      if (current < target) {
-        counter.innerText = Math.floor(current).toLocaleString('tr-TR');
-        requestAnimationFrame(update);
-      } else {
-        counter.innerText = target.toLocaleString('tr-TR');
-      }
-    };
-    update();
-  });
-  started = true;
-};
-
 window.addEventListener('scroll', () => {
   const stats = document.querySelector('.stats');
+  if (!stats || started) return;
+
   if (stats.getBoundingClientRect().top < window.innerHeight - 100) {
-    startCounters();
+    counters.forEach(counter => {
+      const target = +counter.dataset.target;
+      let current = 0;
+      const step = target / 120;
+
+      const update = () => {
+        current += step;
+        if (current < target) {
+          counter.innerText = Math.floor(current);
+          requestAnimationFrame(update);
+        } else {
+          counter.innerText = target;
+        }
+      };
+      update();
+    });
+    started = true;
   }
 });
-</script>
 
+</script>
 </body>
 </html>
-
