--- a/index.html
+++ b/index.html
@@ -142,42 +142,111 @@
 
 </section>
 
-<script src="script.js">
-  window.addEventListener("load", () => {
+<script>
+/* =========================
+   LOADER
+========================= */
+window.addEventListener("load", () => {
   const loader = document.getElementById("loader");
-  loader.style.opacity = "0";
-  setTimeout(() => loader.style.display = "none", 600);
-});
-
-const counters = document.querySelectorAll('.counter');
-let started = false;
-
-window.addEventListener('scroll', () => {
-  const stats = document.querySelector('.stats');
-  if (!stats || started) return;
-
-  if (stats.getBoundingClientRect().top < window.innerHeight - 100) {
-    counters.forEach(counter => {
-      const target = +counter.dataset.target;
-      let current = 0;
-      const step = target / 120;
-
-      const update = () => {
-        current += step;
-        if (current < target) {
-          counter.innerText = Math.floor(current);
-          requestAnimationFrame(update);
-        } else {
-          counter.innerText = target;
-        }
-      };
-      update();
-    });
-    started = true;
+  if (loader) {
+    loader.style.opacity = "0";
+    setTimeout(() => {
+      loader.style.display = "none";
+    }, 600);
   }
 });
 
+
+/* =========================
+   SMOOTH SCROLL (MENU)
+========================= */
+document.querySelectorAll('nav a[href^="#"]').forEach(link => {
+  link.addEventListener("click", function (e) {
+    e.preventDefault();
+
+    const targetId = this.getAttribute("href");
+    const targetSection = document.querySelector(targetId);
+
+    if (targetSection) {
+      const headerOffset = document.querySelector("header").offsetHeight;
+      const elementPosition = targetSection.getBoundingClientRect().top;
+      const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
+
+      window.scrollTo({
+        top: offsetPosition,
+        behavior: "smooth"
+      });
+    }
+  });
+});
+
+
+/* =========================
+   COUNTER (HAKKIMIZDA)
+========================= */
+const counters = document.querySelectorAll(".counter");
+let counterStarted = false;
+
+function runCounters() {
+  counters.forEach(counter => {
+    const target = +counter.getAttribute("data-target");
+    let current = 0;
+    const increment = target / 120;
+
+    const updateCounter = () => {
+      current += increment;
+      if (current < target) {
+        counter.innerText = Math.floor(current);
+        requestAnimationFrame(updateCounter);
+      } else {
+        counter.innerText = target;
+      }
+    };
+
+    updateCounter();
+  });
+}
+
+window.addEventListener("scroll", () => {
+  const aboutSection = document.querySelector(".about");
+  if (!aboutSection) return;
+
+  const sectionTop = aboutSection.getBoundingClientRect().top;
+  const screenHeight = window.innerHeight;
+
+  if (sectionTop < screenHeight - 150 && !counterStarted) {
+    runCounters();
+    counterStarted = true;
+  }
+});
+
+
+/* =========================
+   ACTIVE MENU (SCROLL)
+========================= */
+const sections = document.querySelectorAll("section[id]");
+const navLinks = document.querySelectorAll("nav a");
+
+window.addEventListener("scroll", () => {
+  let current = "";
+
+  sections.forEach(section => {
+    const sectionTop = section.offsetTop - 120;
+    if (pageYOffset >= sectionTop) {
+      current = section.getAttribute("id");
+    }
+  });
+
+  navLinks.forEach(link => {
+    link.classList.remove("active");
+    if (link.getAttribute("href") === "#" + current) {
+      link.classList.add("active");
+    }
+  });
+});
 </script>
+
 </body>
 </html>
+
 
