--- a/index.html
+++ b/index.html
@@ -1,212 +1,248 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Yıldızlar Bungalov</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yıldızlar Bungalov</title>
 
-<!-- GOOGLE FONTS -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Birthstone&display=swap" rel="stylesheet">
-
-<!-- ICONS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-<style>
-/* RESET */
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:Poppins,sans-serif}
-
-/* LOADER */
-#loader{
-  position:fixed;inset:0;
-  background:#0f0f0f;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  z-index:9999
-}
-#loader img{
-  width:140px;
-  animation:pulse 1.6s infinite
-}
-@keyframes pulse{
-  0%{opacity:.4;transform:scale(.95)}
-  50%{opacity:1;transform:scale(1)}
-  100%{opacity:.4;transform:scale(.95)}
-}
-
-/* HEADER */
-header{
-  position:fixed;top:0;width:100%;
-  backdrop-filter:blur(8px);
-  z-index:100
-}
-nav ul{
-  list-style:none;
-  display:flex;
-  justify-content:flex-end;
-  gap:32px;
-  padding:20px 40px
-}
-nav a{
-  color:#fff;
-  text-decoration:none;
-  font-weight:500
-}
-
-/* HERO */
-.main-content{
-  height:100vh;
-  background:url("images/anasayfa.jpg") center/cover no-repeat;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  color:#fff
-}
-.baslik h1{
-  font-family:'Birthstone',cursive;
-  font-size:96px;
-  color:#d4af37
-}
-.baslik p{letter-spacing:2px}
-
-/* SECTION */
-section{padding:100px 60px}
-
-/* ABOUT */
-.about{background:#fff;color:#000}
-.about h2{color:#d4af37;margin-bottom:20px}
-
-/* GALLERY */
-.gorseller{background:#f5f5f5}
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:30px
-}
-.card{
-  background:#fff;
-  border-radius:14px;
-  overflow:hidden;
-  box-shadow:0 10px 30px rgba(0,0,0,.1)
-}
-.card img{
-  width:100%;
-  height:280px;
-  object-fit:cover
-}
-.card h3{color:#d4af37;padding:16px}
-.card p{padding:0 16px 20px;color:#333}
-
-/* CONTACT */
-.contact{background:#fff}
-.contact-wrap{
-  display:grid;
-  grid-template-columns:1fr 1fr 1fr;
-  gap:30px
-}
-.contact iframe{
-  width:100%;
-  height:220px;
-  border:0;
-  border-radius:12px
-}
-
-/* FOOTER */
-footer{
-  text-align:center;
-  padding:20px;
-  font-size:13px;
-  color:#777
-}
-
-/* MOBILE */
-@media(max-width:800px){
-  .baslik h1{font-size:64px}
-  .contact-wrap{grid-template-columns:1fr}
-}
-</style>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
 
 <!-- LOADER -->
 <div id="loader">
-  <img src="images/logo.png" alt="logo">
+  <div class="loader-content">
+    <img src="images/logo.png" alt="Yıldızlar Bungalov">
+  </div>
 </div>
 
+<!-- HEADER -->
 <header>
-<nav>
-<ul>
-<li><a href="#home">Ana Sayfa</a></li>
-<li><a href="#about">Hakkımızda</a></li>
-<li><a href="#gallery">Görseller</a></li>
-<li><a href="#contact">İletişim</a></li>
-</ul>
-</nav>
+  <nav>
+    <ul>
+      <li><a href="#index">Ana Sayfa</a></li>
+      <li><a href="#about">Hakkımızda</a></li>
+      <li><a href="#gorsel">Görseller</a></li>
+      <li><a href="#iletisim">İletişim</a></li>
+    </ul>
+  </nav>
 </header>
 
-<section class="main-content" id="home">
-<div class="baslik">
-<h1>YILDIZLAR</h1>
-<p>Yaşam Burada Başlıyor</p>
-</div>
+<!-- HERO -->
+<section class="main-content" id="index">
+  <div class="baslik">
+    <h1>YILDIZLAR</h1>
+    <p>“Yaşam Burada Başlıyor”</p>
+  </div>
 </section>
 
+<!-- HAKKIMIZDA -->
 <section class="about" id="about">
-<h2>Hakkımızda</h2>
-<p>
-<strong>Yıldızlar İnşaat</strong>, doğayla uyumlu, güvenli ve estetik yaşam alanları üretir.
-</p>
+
+  <div class="container">
+    <h1>Hakkımızda</h1>
+
+    <p><strong>Yıldızlar İnşaat</strong>, yaşam alanlarını yalnızca inşa etmekle kalmayıp,
+    onlara <strong>değer, güven ve sürdürülebilirlik</strong> kazandırma vizyonuyla
+    faaliyet göstermektedir.</p>
+
+    <p>Her projede; <strong>sağlam yapı, estetik tasarım ve doğru lokasyon</strong>
+    ilkelerini merkeze alıyoruz.</p>
+
+    <p>Alanında deneyimli kadromuz ve şeffaf çalışma anlayışımızla
+    güvenilir projeler üretmeyi hedefliyoruz.</p>
+
+    <p class="slogan"><em>Yaşam burada başlıyor.</em></p>
+  </div>
+
+  <div class="resim-hakkimizda">
+    <img src="images/hakkımızda.jpg" alt="Hakkımızda">
+  </div>
+
+  <div class="stats">
+    <div class="stat-item">
+      <i class="fa-solid fa-map-location-dot"></i>
+      <h3 class="counter" data-target="75672">0</h3>
+      <p>m² Arsa Alanı</p>
+    </div>
+
+    <div class="stat-item">
+      <i class="fa-solid fa-building"></i>
+      <h3 class="counter" data-target="34524">0</h3>
+      <p>m² İnşaat Alanı</p>
+    </div>
+
+    <div class="stat-item">
+      <i class="fa-solid fa-house"></i>
+      <h3 class="counter" data-target="50">0</h3>
+      <p>Konut</p>
+    </div>
+  </div>
+
 </section>
 
-<section class="gorseller" id="gallery">
-<div class="cards">
-<div class="card">
-<img src="images/bungalov1.jpg">
-<h3>Dış Görünüş</h3>
-<p>Doğayla uyumlu mimari.</p>
-</div>
-<div class="card">
-<img src="images/bungalovici.jpg">
-<h3>İç Mekan</h3>
-<p>Ferah ve konforlu alan.</p>
-</div>
-<div class="card">
-<img src="images/dinlenmealanı.jpg">
-<h3>Dinlenme Alanı</h3>
-<p>Sessiz ve huzurlu ortam.</p>
-</div>
-</div>
+<!-- GÖRSELLER -->
+<section class="gorseller" id="gorsel">
+  <div class="gorseller-wrapper">
+
+    <article class="gorsel-card">
+      <img src="images/bungalov1.jpg">
+      <h3>Dış Görünüş</h3>
+      <p>Doğayla uyumlu mimari tasarım.</p>
+    </article>
+
+    <article class="gorsel-card">
+      <img src="images/bungalovici.jpg">
+      <h3>İç Mekan</h3>
+      <p>Ferah ve konforlu yaşam alanı.</p>
+    </article>
+
+    <article class="gorsel-card">
+      <img src="images/dinlenmealanı.jpg">
+      <h3>Dinlenme Alanı</h3>
+      <p>Huzurlu ve sakin ortam.</p>
+    </article>
+
+  </div>
 </section>
 
-<section class="contact" id="contact">
-<div class="contact-wrap">
-<div>
-<img src="images/logo.png" width="160"><br><br>
-Doğayla iç içe huzurlu yaşam
-</div>
+<!-- İLETİŞİM -->
+<section class="contact" id="iletisim">
 
-<div>
-<p><i class="fa-solid fa-phone"></i> +90 5XX XXX XX XX</p>
-<p><i class="fa-solid fa-envelope"></i> yildizlarinsaat@gmail.com</p>
-<p><i class="fa-solid fa-location-dot"></i> Sapanca / Sakarya</p>
-</div>
+  <div class="contact-wrapper">
 
-<div>
-<iframe src="https://www.google.com/maps?q=40.699221,30.257227&z=15&output=embed"></iframe>
-</div>
-</div>
+    <div class="contact-logo">
+      <img src="images/logo.png">
+      <p>Doğayla iç içe huzurlu bir yaşam</p>
+    </div>
+
+    <div class="contact-info">
+      <h3>İletişim</h3>
+      <p><i class="fa-solid fa-phone"></i> +90 5XX XXX XX XX</p>
+      <p><i class="fa-solid fa-envelope"></i> yildizlarinsaat@gmail.com</p>
+      <p><i class="fa-solid fa-location-dot"></i> Sapanca / Sakarya</p>
+    </div>
+
+    <div class="contact-map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1798.5887273543756!2d30.257227718897557!3d40.69922123377462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1str!2str!4v1770077653364!5m2!1str!2str"
+        loading="lazy">
+      </iframe>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2026 Yıldızlar Bungalov. Tüm hakları saklıdır.
+  </div>
+
 </section>
-
-<footer>
-© 2026 Yıldızlar Bungalov
-</footer>
 
 <script>
-window.addEventListener("load",()=>{
-  document.getElementById("loader").style.display="none";
+/* =========================
+   LOADER
+========================= */
+window.addEventListener("load", () => {
+  const loader = document.getElementById("loader");
+  if (loader) {
+    loader.style.opacity = "0";
+    setTimeout(() => {
+      loader.style.display = "none";
+    }, 600);
+  }
+});
+
+
+/* =========================
+   SMOOTH SCROLL (MENU)
+========================= */
+document.querySelectorAll('nav a[href^="#"]').forEach(link => {
+  link.addEventListener("click", function (e) {
+    e.preventDefault();
+
+    const targetId = this.getAttribute("href");
+    const targetSection = document.querySelector(targetId);
+
+    if (targetSection) {
+      const headerOffset = document.querySelector("header").offsetHeight;
+      const elementPosition = targetSection.getBoundingClientRect().top;
+      const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
+
+      window.scrollTo({
+        top: offsetPosition,
+        behavior: "smooth"
+      });
+    }
+  });
+});
+
+
+/* =========================
+   COUNTER (HAKKIMIZDA)
+========================= */
+const counters = document.querySelectorAll(".counter");
+let counterStarted = false;
+
+function runCounters() {
+  counters.forEach(counter => {
+    const target = +counter.getAttribute("data-target");
+    let current = 0;
+    const increment = target / 120;
+
+    const updateCounter = () => {
+      current += increment;
+      if (current < target) {
+        counter.innerText = Math.floor(current);
+        requestAnimationFrame(updateCounter);
+      } else {
+        counter.innerText = target;
+      }
+    };
+
+    updateCounter();
+  });
+}
+
+window.addEventListener("scroll", () => {
+  const aboutSection = document.querySelector(".about");
+  if (!aboutSection) return;
+
+  const sectionTop = aboutSection.getBoundingClientRect().top;
+  const screenHeight = window.innerHeight;
+
+  if (sectionTop < screenHeight - 150 && !counterStarted) {
+    runCounters();
+    counterStarted = true;
+  }
+});
+
+
+/* =========================
+   ACTIVE MENU (SCROLL)
+========================= */
+const sections = document.querySelectorAll("section[id]");
+const navLinks = document.querySelectorAll("nav a");
+
+window.addEventListener("scroll", () => {
+  let current = "";
+
+  sections.forEach(section => {
+    const sectionTop = section.offsetTop - 120;
+    if (pageYOffset >= sectionTop) {
+      current = section.getAttribute("id");
+    }
+  });
+
+  navLinks.forEach(link => {
+    link.classList.remove("active");
+    if (link.getAttribute("href") === "#" + current) {
+      link.classList.add("active");
+    }
+  });
 });
 </script>
 
