--- a/index.html
+++ b/index.html
@@ -6,19 +6,14 @@
   <title>Yıldızlar Bungalov</title>
 
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  >
   <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
-
-<!-- LOADER -->
-<div id="loader">
-  <div class="loader-content">
-    <img src="images/logo.png" alt="Yıldızlar Bungalov">
-  </div>
-</div>
 
 <!-- HEADER -->
 <header>
@@ -32,9 +27,9 @@
   </nav>
 </header>
 
-<!-- HERO -->
+<!-- HERO / ANA SAYFA -->
 <section class="main-content" id="index">
-  <div class="baslik">
+  <div class="baslık">
     <h1>YILDIZLAR</h1>
     <p>“Yaşam Burada Başlıyor”</p>
   </div>
@@ -42,24 +37,31 @@
 
 <!-- HAKKIMIZDA -->
 <section class="about" id="about">
-
   <div class="container">
     <h1>Hakkımızda</h1>
 
-    <p><strong>Yıldızlar İnşaat</strong>, yaşam alanlarını yalnızca inşa etmekle kalmayıp,
-    onlara <strong>değer, güven ve sürdürülebilirlik</strong> kazandırma vizyonuyla
-    faaliyet göstermektedir.</p>
+    <p>
+      <strong>Yıldızlar İnşaat</strong>, yaşam alanlarını yalnızca inşa etmekle kalmayıp,
+      onlara <strong>değer, güven ve sürdürülebilirlik</strong> kazandırma vizyonuyla
+      faaliyet göstermektedir.
+    </p>
 
-    <p>Her projede; <strong>sağlam yapı, estetik tasarım ve doğru lokasyon</strong>
-    ilkelerini merkeze alıyoruz.</p>
+    <p>
+      Modern mimariyi fonksiyonel yaşam alanlarıyla buluşturarak,
+      bugünün ihtiyaçlarına ve yarının beklentilerine cevap veren projeler üretiyoruz.
+    </p>
 
-    <p>Alanında deneyimli kadromuz ve şeffaf çalışma anlayışımızla
-    güvenilir projeler üretmeyi hedefliyoruz.</p>
+    <p>
+      Bizim için her proje yalnızca bir yapı değil,
+      içinde hayatların şekillendiği kalıcı bir değerdir.
+    </p>
 
-    <p class="slogan"><em>Yaşam burada başlıyor.</em></p>
+    <p class="slogan">
+      <em>Yaşam burada başlıyor.</em>
+    </p>
   </div>
 
-  <div class="resim-hakkimizda">
+  <div class="resim-hakkımızda">
     <img src="images/hakkımızda.jpg" alt="Hakkımızda">
   </div>
 
@@ -82,7 +84,6 @@
       <p>Konut</p>
     </div>
   </div>
-
 </section>
 
 <!-- GÖRSELLER -->
@@ -90,21 +91,30 @@
   <div class="gorseller-wrapper">
 
     <article class="gorsel-card">
-      <img src="images/bungalov1.jpg">
+      <img src="images/bungalov1.jpg" alt="Dış Görünüş">
       <h3>Dış Görünüş</h3>
-      <p>Doğayla uyumlu mimari tasarım.</p>
+      <p>
+        Doğayla uyumlu mimarisi ve ahşap dokusuyla
+        huzur veren bir dış tasarım sunar.
+      </p>
     </article>
 
     <article class="gorsel-card">
-      <img src="images/bungalovici.jpg">
+      <img src="images/bungalovici.jpg" alt="İç Mekan">
       <h3>İç Mekan</h3>
-      <p>Ferah ve konforlu yaşam alanı.</p>
+      <p>
+        Sade, ferah ve konforlu iç mekan tasarımıyla
+        ev sıcaklığında bir deneyim sağlar.
+      </p>
     </article>
 
     <article class="gorsel-card">
-      <img src="images/dinlenmealanı.jpg">
+      <img src="images/dinlenmealanı.jpg" alt="Dinlenme Alanı">
       <h3>Dinlenme Alanı</h3>
-      <p>Huzurlu ve sakin ortam.</p>
+      <p>
+        Doğanın sesleri eşliğinde dinlenebileceğiniz,
+        sakin ve özel bir alan sunar.
+      </p>
     </article>
 
   </div>
@@ -112,25 +122,29 @@
 
 <!-- İLETİŞİM -->
 <section class="contact" id="iletisim">
-
   <div class="contact-wrapper">
 
+    <!-- SOL -->
     <div class="contact-logo">
-      <img src="images/logo.png">
+      <img src="images/logo.png" alt="Yıldızlar Bungalov">
       <p>Doğayla iç içe huzurlu bir yaşam</p>
     </div>
 
+    <!-- ORTA -->
     <div class="contact-info">
       <h3>İletişim</h3>
+
       <p><i class="fa-solid fa-phone"></i> +90 5XX XXX XX XX</p>
       <p><i class="fa-solid fa-envelope"></i> yildizlarinsaat@gmail.com</p>
       <p><i class="fa-solid fa-location-dot"></i> Sapanca / Sakarya</p>
     </div>
 
+    <!-- SAĞ -->
     <div class="contact-map">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1798.5887273543756!2d30.257227718897557!3d40.69922123377462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1str!2str!4v1770077653364!5m2!1str!2str"
-        loading="lazy">
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1271.7429520294334!2d30.249428865366166!3d40.70190992554778"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
 
@@ -139,112 +153,42 @@
   <div class="footer-bottom">
     © 2026 Yıldızlar Bungalov. Tüm hakları saklıdır.
   </div>
-
 </section>
 
+<!-- COUNTER SCRIPT -->
 <script>
-/* =========================
-   LOADER
-========================= */
-window.addEventListener("load", () => {
-  const loader = document.getElementById("loader");
-  if (loader) {
-    loader.style.opacity = "0";
-    setTimeout(() => {
-      loader.style.display = "none";
-    }, 600);
-  }
-});
+const counters = document.querySelectorAll('.counter');
+let started = false;
 
-
-/* =========================
-   SMOOTH SCROLL (MENU)
-========================= */
-document.querySelectorAll('nav a[href^="#"]').forEach(link => {
-  link.addEventListener("click", function (e) {
-    e.preventDefault();
-
-    const targetId = this.getAttribute("href");
-    const targetSection = document.querySelector(targetId);
-
-    if (targetSection) {
-      const headerOffset = document.querySelector("header").offsetHeight;
-      const elementPosition = targetSection.getBoundingClientRect().top;
-      const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
-
-      window.scrollTo({
-        top: offsetPosition,
-        behavior: "smooth"
-      });
-    }
-  });
-});
-
-
-/* =========================
-   COUNTER (HAKKIMIZDA)
-========================= */
-const counters = document.querySelectorAll(".counter");
-let counterStarted = false;
-
-function runCounters() {
+const startCounters = () => {
+  if (started) return;
   counters.forEach(counter => {
-    const target = +counter.getAttribute("data-target");
+    const target = +counter.dataset.target;
     let current = 0;
     const increment = target / 120;
 
-    const updateCounter = () => {
+    const update = () => {
       current += increment;
       if (current < target) {
-        counter.innerText = Math.floor(current);
-        requestAnimationFrame(updateCounter);
+        counter.innerText = Math.floor(current).toLocaleString('tr-TR');
+        requestAnimationFrame(update);
       } else {
-        counter.innerText = target;
+        counter.innerText = target.toLocaleString('tr-TR');
       }
     };
-
-    updateCounter();
+    update();
   });
-}
+  started = true;
+};
 
-window.addEventListener("scroll", () => {
-  const aboutSection = document.querySelector(".about");
-  if (!aboutSection) return;
-
-  const sectionTop = aboutSection.getBoundingClientRect().top;
-  const screenHeight = window.innerHeight;
-
-  if (sectionTop < screenHeight - 150 && !counterStarted) {
-    runCounters();
-    counterStarted = true;
+window.addEventListener('scroll', () => {
+  const stats = document.querySelector('.stats');
+  if (stats.getBoundingClientRect().top < window.innerHeight - 100) {
+    startCounters();
   }
-});
-
-
-/* =========================
-   ACTIVE MENU (SCROLL)
-========================= */
-const sections = document.querySelectorAll("section[id]");
-const navLinks = document.querySelectorAll("nav a");
-
-window.addEventListener("scroll", () => {
-  let current = "";
-
-  sections.forEach(section => {
-    const sectionTop = section.offsetTop - 120;
-    if (pageYOffset >= sectionTop) {
-      current = section.getAttribute("id");
-    }
-  });
-
-  navLinks.forEach(link => {
-    link.classList.remove("active");
-    if (link.getAttribute("href") === "#" + current) {
-      link.classList.add("active");
-    }
-  });
 });
 </script>
 
 </body>
 </html>
+
