--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <div class="resim-hakkımızda">
-    <img src="images/hakkımızda.jpg" alt="Hakkımızda">
+    <img src="images/hakkimizda.jpg" alt="Hakkımızda">
   </div>
 
   <div class="stats">
@@ -100,7 +100,7 @@
     </article>
 
     <article class="gorsel-card">
-      <img src="images/bungalovici.jpg" alt="İç Mekan">
+      <img src="images/home.jpg" alt="İç Mekan">
       <h3>İç Mekan</h3>
       <p>
         Sade, ferah ve konforlu iç mekan tasarımıyla
@@ -191,4 +191,5 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
