--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </article>
 
     <article class="gorsel-card">
-      <img src="images/dinlenmealanı.jpg" alt="Dinlenme Alanı">
+      <img src="images/dinlenme.jpg" alt="Dinlenme Alanı">
       <h3>Dinlenme Alanı</h3>
       <p>
         Doğanın sesleri eşliğinde dinlenebileceğiniz,
@@ -191,5 +191,6 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
