Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <div class="resim-hakkımızda">
-    <img src="images/hakkimizda.jpg" alt="Hakkımızda">
+    <img src="images/skys.jpg" alt="Hakkımızda">
   </div>
 
   <div class="stats">
@@ -192,6 +192,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
